update Made by Rishav in p

--- a/index.html
+++ b/index.html
@@ -1037,6 +1037,7 @@
         </div>
       </div>
       <p class="Copyright"> Copyright © 2024 hoichoi</p>
+      <p>Made by Rishav Mandal</p>
     </div>
     <body>
       <style>
